# spektr

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
spektr/: __init__.py  __main__.py  cli.py  config.py
spektr/core/: cache.py  fetcher.py  scorer.py
spektr/output/: report.py  terminal.py
spektr/providers/: __init__.py  base.py  groq_provider.py
tests/: test_cache.py  test_cli.py  test_config.py  test_fetcher.py  test_providers.py  test_report.py  test_scorer.py
