[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spektr"
version = "0.1.0"
description = "CVE intelligence and triage CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["cve", "security", "vulnerability", "pentesting", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "pyfiglet>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[project.scripts]
spektr = "spektr.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
